changed the names for everybody + my description

--- a/team.html
+++ b/team.html
@@ -61,9 +61,9 @@
                   <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                     <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/201x201">
                     <div class="flex-grow sm:pl-8">
-                      <h2 class="title-font font-medium text-lg text-gray-900">Alper Kamu</h2>
-                      <h3 class="text-gray-500 mb-3">Designer</h3>
-                      <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                      <h2 class="title-font font-medium text-lg text-gray-900">Kelly Kenyon</h2>
+                      <h3 class="text-gray-500 mb-3">Stay at Home Adult</h3>
+                      <p class="mb-4">Believe it or not this is the hardest my brain has worked in the past year. fml</p>
                       <span class="inline-flex">
                         <a class="text-gray-500">
                           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -72,7 +72,7 @@
                         </a>
                         <a class="ml-2 text-gray-500">
                           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" href="https://twitter.com/lolyouright"></path>
                           </svg>
                         </a>
                         <a class="ml-2 text-gray-500">
@@ -88,7 +88,7 @@
                   <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                     <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/204x204">
                     <div class="flex-grow sm:pl-8">
-                      <h2 class="title-font font-medium text-lg text-gray-900">Atticus Finch</h2>
+                      <h2 class="title-font font-medium text-lg text-gray-900">Jullie Lee</h2>
                       <h3 class="text-gray-500 mb-3">UI Developer</h3>
                       <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
                       <span class="inline-flex">
@@ -115,7 +115,7 @@
                   <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                     <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/206x206">
                     <div class="flex-grow sm:pl-8">
-                      <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
+                      <h2 class="title-font font-medium text-lg text-gray-900">Angela Sun</h2>
                       <h3 class="text-gray-500 mb-3">Designer</h3>
                       <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
                       <span class="inline-flex">
