--- a/team.html
+++ b/team.html
@@ -89,8 +89,8 @@
                     <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://cdn.discordapp.com/attachments/786105869590069309/786613683752927252/image0.jpg">
                     <div class="flex-grow sm:pl-8">
                       <h2 class="title-font font-medium text-lg text-gray-900">Jullie Lee</h2>
-                      <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                      <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                      <h3 class="text-gray-500 mb-3">Clueless College Student</h3>
+                      <p class="mb-4">Hi</p>
                       <span class="inline-flex">
                         <a class="text-gray-500" href="https://www.instagram.com/jullie.jpg/">
                           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -113,11 +113,11 @@
                 </div>
                 <div class="p-4 lg:w-1/2">
                   <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                    <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/206x206">
+                    <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://cdn.discordapp.com/attachments/786105869590069309/786630004775321625/unknown.png">
                     <div class="flex-grow sm:pl-8">
                       <h2 class="title-font font-medium text-lg text-gray-900">Angela Sun</h2>
-                      <h3 class="text-gray-500 mb-3">Designer</h3>
-                      <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                      <h3 class="text-gray-500 mb-3">In Bed</h3>
+                      <p class="mb-4">No thoughts; Head empty</p>
                       <span class="inline-flex">
                         <a class="text-gray-500" href="https://www.instagram.com/_angela.sun/">
                           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
