--- a/team.html
+++ b/team.html
@@ -32,7 +32,7 @@
               <div class="flex flex-wrap -m-4">
                 <div class="p-4 lg:w-1/2">
                   <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                    <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://media.discordapp.net/attachments/786105869590069309/786611639742234664/prom.jpeg?width=557&height=558">
+                    <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://cdn.discordapp.com/attachments/786105869590069309/786625080364761118/image0.png">
                     <div class="flex-grow sm:pl-8">
                       <h2 class="title-font font-medium text-lg text-gray-900">Melanie Toh</h2>
                       <h3 class="text-gray-500 mb-3">???</h3>
