--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="p-4 lg:w-1/2">
                   <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                    <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://cdn.discordapp.com/attachments/786105869590069309/786613683752927252/image0.jpg">
+                    <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://cdn.discordapp.com/attachments/786105869590069309/786637604702650468/image0.png">
                     <div class="flex-grow sm:pl-8">
                       <h2 class="title-font font-medium text-lg text-gray-900">Jullie Lee</h2>
                       <h3 class="text-gray-500 mb-3">Clueless College Student</h3>
