--- a/resultpage.html
+++ b/resultpage.html
@@ -11,7 +11,7 @@
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a class="mr-5 hover: text-white" href="membership.html">Membership Plans</a>
-            <a class="mr-5 hover: text-white" href="members.html">Eligible Bachelor(ette)s</a>
+            <a class="mr-5 hover: text-white" href="landingpage.html">Eligible Bachelor(ette)s</a>
             <a class="mr-5 hover: text-white" href="team.html">Meet the Team</a>
             <a class="mr-5 hover: text-white" href="contact.html">Contact Us</a>
           </nav>
