--- a/membership.html
+++ b/membership.html
@@ -140,7 +140,7 @@
             </div>
             <div class="lg:w-1/3 w-full lg:mt-px border-2 border-gray-300 lg:border-none rounded-lg lg:rounded-none">
                 <div class="px-2 text-center h-48 flex flex-col items-center justify-center">
-                <h3 class="tracking-widest">RISKING DEPORATION</h3>
+                <h3 class="tracking-widest">RISKING DEPORTATION</h3>
                 <h2 class="text-5xl text-gray-900 font-medium flex items-center justify-center leading-none mb-4 mt-2">$54
                     <span class="text-gray-600 text-base ml-1">/mo</span>
                 </h2>
