--- a/membership.html
+++ b/membership.html
@@ -88,7 +88,7 @@
             <div class="lg:w-1/3 lg:-mt-px w-full mb-10 lg:mb-0 border-2 rounded-lg border-green-500 relative">
                 <span class="bg-green-500 text-white px-3 py-1 tracking-widest text-xs absolute right-0 top-0 rounded-bl">POPULAR</span>
                 <div class="px-2 text-center h-48 flex flex-col items-center justify-center">
-                <h3 class="tracking-widest">DUAL CITIZENSHIP SEEMS NICE</h3>
+                <h3 class="tracking-widest">INTERMEDIATE</h3>
                 <h2 class="text-5xl text-gray-900 font-medium flex items-center justify-center leading-none mb-4 mt-2">$38
                     <span class="text-gray-600 text-base ml-1">/mo</span>
                 </h2>
@@ -135,12 +135,12 @@
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
                     </svg>
                 </button>
-                <p class="text-xs text-gray-500 mt-3">It's nice until you need to pay taxes</p>
+                <p class="text-xs text-gray-500 mt-3">Increase your chances at love!</p>
                 </div>
             </div>
             <div class="lg:w-1/3 w-full lg:mt-px border-2 border-gray-300 lg:border-none rounded-lg lg:rounded-none">
                 <div class="px-2 text-center h-48 flex flex-col items-center justify-center">
-                <h3 class="tracking-widest">RISKING DEPORTATION</h3>
+                <h3 class="tracking-widest">PRO</h3>
                 <h2 class="text-5xl text-gray-900 font-medium flex items-center justify-center leading-none mb-4 mt-2">$54
                     <span class="text-gray-600 text-base ml-1">/mo</span>
                 </h2>
@@ -189,7 +189,7 @@
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
                     </svg>
                 </button>
-                <p class="text-xs text-gray-500 mt-3">Small price to pay to avoid getting shipped back home</p>
+                <p class="text-xs text-gray-500 mt-3">Highest chance!</p>
                 </div>
             </div>
             </div>
