--- a/correct.html
+++ b/correct.html
@@ -35,7 +35,7 @@
             </h1>
             <p class="mb-8 leading-relaxed">You currently have 1 point(s). You are one step closer to securing a US green card :)</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">Next</button>
+              <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg" href="resultpage.html">Next</button>
               <button class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 rounded text-lg">Quit</button>
             </div>
           </div>
